Allow Vercel frontend in CORS